<resources>
    <string name="app_name">enuyguncase</string>
    
    <!-- Navigation -->
    <string name="nav_home">Ana Sayfa</string>
    <string name="nav_favorites">Favoriler</string>
    <string name="nav_cart">Sepet</string>
    
    <!-- Home Screen -->
    <string name="home_products">Ürünler</string>
    <string name="home_filter">Filtre</string>
    <string name="home_sort">Sırala</string>
    <string name="home_search_hint">Ürün ara...</string>
    <string name="home_total_products">Toplam %d ürün</string>
    <string name="home_total_products_format">(Toplam %d adet)</string>
    <string name="home_no_products">Ürün bulunamadı</string>
    <string name="home_error_message">Bir hata oluştu</string>
    
    <!-- Filter Screen -->
    <string name="filter_title">Kategori Filtrele</string>
    <string name="filter_clear">Temizle</string>
    <string name="filter_apply">Uygula</string>
    <string name="filter_all_categories">Tüm Kategoriler</string>
    
    <!-- Sort Screen -->
    <string name="sort_title">Sıralama Seç</string>
    <string name="sort_default">Varsayılan (Sıralama yok)</string>
    <string name="sort_price_low_to_high">Fiyat (Düşükten Yükseğe)</string>
    <string name="sort_price_high_to_low">Fiyat (Yüksekten Düşüğe)</string>
    <string name="sort_rating_asc">Puanına göre ↑</string>
    <string name="sort_rating_desc">Puanına göre ↓</string>
    <string name="sort_discount_desc">İndirime göre ↓</string>
    <string name="sort_stock_asc">Stok miktarına göre ↑</string>
    <string name="sort_stock_desc">Stok miktarına göre ↓</string>
    <string name="sort_name_a_to_z">Ada göre A→Z</string>
    <string name="sort_name_z_to_a">Ada göre Z→A</string>
    <string name="sort_rating">Değerlendirme</string>
    
    <!-- Product Detail -->
    <string name="product_detail_title">Ürün Detayı</string>
    <string name="product_detail_add_to_cart">Sepete Ekle</string>
    <string name="product_detail_add_to_favorites">Favorilere Ekle</string>
    <string name="product_detail_remove_from_favorites">Favorilerden Çıkar</string>
    <string name="product_detail_discount">%%%d</string>
    <string name="product_detail_price_format">%.2f₺</string>
    <string name="product_detail_original_price_format">%.2f₺</string>
    <string name="product_detail_description">Açıklama</string>
    <string name="product_detail_reviews">Yorumlar</string>
    <string name="product_detail_rating">Değerlendirme</string>
    
    <!-- Cart Screen -->
    <string name="cart_title">SEPET</string>
    <string name="cart_price_label">Fiyat:</string>
    <string name="cart_discount_label">İndirim:</string>
    <string name="cart_total_label">Toplam:</string>
    <string name="cart_empty">Sepetiniz boş</string>
    <string name="cart_total">Toplam: %.2f₺</string>
    <string name="cart_checkout">Ödemeye Geç</string>
    <string name="cart_remove_item">Ürünü Kaldır</string>
    <string name="cart_quantity">Adet: %d</string>
    <string name="cart_price_format">%.2f₺</string>
    <string name="cart_discount_price_format">%.2f₺</string>
    
    <!-- Favorite Screen -->
    <string name="favorite_title">FAVORİLER</string>
    <string name="favorite_empty">Favori ürününüz yok</string>
    <string name="favorite_price_format">%.2f₺</string>
    <string name="favorite_remove">Favorilerden Çıkar</string>
    
    <!-- Checkout Screen -->
    <string name="checkout_title">ÖDEME</string>
    <string name="checkout_name">Ad Soyad</string>
    <string name="checkout_email">E-posta</string>
    <string name="checkout_phone">Telefon</string>
    <string name="checkout_phone_required">Telefon numarası gerekli</string>
    <string name="checkout_name_required">Ad soyad gerekli</string>
    <string name="checkout_email_required">E-posta gerekli</string>
    <string name="checkout_email_invalid">Geçersiz e-posta formatı</string>
    <string name="checkout_phone_invalid">Geçersiz telefon formatı</string>
    <string name="checkout_total_amount">Toplam Tutar: %.2f₺</string>
    <string name="checkout_confirm_order">Siparişi Onayla</string>
    <string name="checkout_confirm_order_button">SİPARİŞİ ONAYLA</string>
    <string name="checkout_success">Siparişiniz başarıyla oluşturuldu!</string>
    <string name="checkout_error">Sipariş oluşturulurken bir hata oluştu</string>
    
    <!-- Order Success Screen -->
    <string name="order_success_title">Siparişiniz Alındı!</string>
    <string name="order_success_message">Siparişiniz başarıyla oluşturuldu. Sipariş numaranız: #%s</string>
    <string name="order_success_thank_you">Teşekkür ederiz!</string>
    <string name="order_success_continue_shopping">Alışverişe Devam Et</string>
    <string name="order_success_go_home">Anasayfaya Dön</string>
    <string name="order_success_order_details">Sipariş Detayları</string>
    <string name="order_success_estimated_delivery">Tahmini Teslimat: 3–5 iş günü</string>
    <string name="order_success_tracking_info">Siparişinizi takip etmek için e-posta adresinizi kontrol edin.</string>
    
    <!-- Common -->
    <string name="common_loading">Yükleniyor...</string>
    
    <!-- Error Messages -->
    <string name="error_empty_response">Sunucudan boş yanıt geldi</string>
    <string name="error_loading_products">Ürünler yüklenirken bir hata oluştu</string>
    <string name="error_icon">Hata ikonu</string>
    <string name="retry">Tekrar Dene</string>
    <string name="splash_subtitle">Alışveriş Deneyimi</string>
    <string name="error_client">İstemci hatası</string>
    <string name="error_server">Sunucu hatası</string>
    <string name="error_unexpected_http">Beklenmeyen HTTP kodu: %d</string>
    <string name="error_unknown_brand">Bilinmeyen Marka</string>
    <string name="common_error">Hata</string>
    <string name="common_success">Başarılı</string>
    <string name="common_cancel">İptal</string>
    <string name="common_ok">Tamam</string>
    <string name="common_yes">Evet</string>
    <string name="common_no">Hayır</string>
    <string name="common_retry">Tekrar Dene</string>
    <string name="common_back">Geri</string>
    <string name="common_next">İleri</string>
    <string name="common_previous">Önceki</string>
    

    
    <!-- Currency -->
    <string name="currency_format">%.2f₺</string>
    <string name="currency_symbol">₺</string>
    
    <!-- Placeholder strings (can be removed later) -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>