<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.enuyguncase.presentation.home.HomeFragment"
        android:label="@string/nav_home" >
        <action
            android:id="@+id/action_homeFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.example.enuyguncase.presentation.favorite.FavoriteFragment"
        android:label="@string/nav_favorites" >
        <action
            android:id="@+id/action_favoriteFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.enuyguncase.presentation.cart.CartFragment"
        android:label="@string/nav_cart" >
        <action
            android:id="@+id/action_cartFragment_to_checkoutFragment"
            app:destination="@id/checkoutFragment" />
    </fragment>

    <!-- Ürün detayı ve checkout sayfaları da buraya eklenebilir -->
    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.example.enuyguncase.presentation.productdetail.ProductDetailFragment"
        android:label="@string/product_detail_title" >
        <argument
            android:name="productId"
            app:argType="integer" />

        <action
            android:id="@+id/action_productDetailFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_productDetailFragment_to_favoriteFragment"
            app:destination="@id/favoriteFragment" />
    </fragment>
    <fragment
        android:id="@+id/checkoutFragment"
        android:name="com.example.enuyguncase.presentation.checkout.CheckoutFragment"
        android:label="@string/checkout_title" >
        <action
            android:id="@+id/action_checkoutFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
        <action
            android:id="@+id/action_checkoutFragment_to_orderSuccessFragment"
            app:destination="@id/orderSuccessFragment" />
    </fragment>
    
    <fragment
        android:id="@+id/orderSuccessFragment"
        android:name="com.example.enuyguncase.presentation.ordersuccess.OrderSuccessFragment"
        android:label="@string/order_success_title" >
        <argument
            android:name="orderNumber"
            app:argType="string" />
        <action
            android:id="@+id/action_orderSuccessFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>
